--- a/drivers/dma/Kconfig
+++ b/drivers/dma/Kconfig
@@ -80,4 +80,6 @@ source "drivers/dma/Kconfig.nxp_edma"
 
 source "drivers/dma/Kconfig.dw_axi_dmac"
 
+source "drivers/dma/Kconfig.mec5"
+
 endif # DMA
