--- a/soc/microchip/mec/common/CMakeLists.txt
+++ b/soc/microchip/mec/common/CMakeLists.txt
@@ -8,6 +8,12 @@ zephyr_library_sources_ifdef(CONFIG_HAS_MEC5_HAL
   soc_cmn_init.c
 )
 
+if(CONFIG_HAS_MEC5_HAL)
+if(CONFIG_PM OR CONFIG_PM_DEVICE)
+  zephyr_library_sources(soc_power.c)
+endif()
+endif()
+
 if (DEFINED CONFIG_MCHP_HEADER_VERBOSE_OUTPUT)
     set(MCHP_HEADER_VERBOSE_OPTION "-v")
 endif()
