--- a/samples/boards/mchp_mec5/i2c/prj.conf
+++ b/samples/boards/mchp_mec5/i2c/prj.conf
@@ -15,10 +15,11 @@ CONFIG_SERIAL=y
 CONFIG_CONSOLE=y
 CONFIG_UART_CONSOLE=y
 CONFIG_DMA=y
+CONFIG_DMA_MCHP_MEC5_AGGREGATED_IRQ=y
 CONFIG_I2C=y
 CONFIG_I2C_CALLBACK=y
 
-# CONFIG_PM=n
+CONFIG_PM=n
 
 # Help debug new code
 # CONFIG_DEBUG_COREDUMP=y
