--- a/samples/boards/mchp_mec5/i2c/prj.conf
+++ b/samples/boards/mchp_mec5/i2c/prj.conf
@@ -15,11 +15,14 @@ CONFIG_SERIAL=y
 CONFIG_CONSOLE=y
 CONFIG_UART_CONSOLE=y
 CONFIG_DMA=y
-CONFIG_DMA_MCHP_MEC5_AGGREGATED_IRQ=y
 CONFIG_I2C=y
 CONFIG_I2C_CALLBACK=y
 
 CONFIG_PM=n
+
+# PCINV usage fault when I2C-NL driver waits calling k_event_wait
+# We need to increase application (main) stack size.
+CONFIG_MAIN_STACK_SIZE=2048
 
 # Help debug new code
 # CONFIG_DEBUG_COREDUMP=y
