samples: boards: mchp_mec5: I2C target mode sample
DNM (DO NOT MERGE). EXPERIMENTAL.
Sample application for Microchip MEC5 evaluation board demonstrating
I2C network layer driver using DMA. Initial target mode I2C write
has been added.

Signed-off-by: Scott Worley <scott.worley@microchip.com>

--- a/samples/boards/mchp_mec5/i2c_target/prj.conf
+++ b/samples/boards/mchp_mec5/i2c_target/prj.conf
@@ -19,6 +19,7 @@ CONFIG_I2C=y
 CONFIG_I2C_CALLBACK=y
 CONFIG_I2C_TARGET=y
 CONFIG_I2C_TARGET_BUFFER_MODE=y
+# CONFIG_I2C_LOG_LEVEL_DBG=y
 
 CONFIG_PM=n
 
