--- a/samples/boards/mchp_mec5/i2c_target/prj.conf
+++ b/samples/boards/mchp_mec5/i2c_target/prj.conf
@@ -14,6 +14,7 @@ CONFIG_LED=y
 CONFIG_SERIAL=y
 CONFIG_CONSOLE=y
 CONFIG_UART_CONSOLE=y
+CONFIG_COUNTER=y
 CONFIG_DMA=y
 CONFIG_I2C=y
 CONFIG_I2C_CALLBACK=y
