drivers: input: microchip: Add MEC5 HAL based key scan matrix driver
Key scan matrix input driver for Microchip MEC5 HAL based devices.

Signed-off-by: Scott Worley <scott.worley@microchip.com>

--- a/drivers/input/Kconfig
+++ b/drivers/input/Kconfig
@@ -21,6 +21,7 @@ source "drivers/input/Kconfig.gpio_qdec"
 source "drivers/input/Kconfig.gt911"
 source "drivers/input/Kconfig.it8xxx2"
 source "drivers/input/Kconfig.kbd_matrix"
+source "drivers/input/Kconfig.mec5"
 source "drivers/input/Kconfig.npcx"
 source "drivers/input/Kconfig.pat912x"
 source "drivers/input/Kconfig.paw32xx"
